update bower components

--- a/marionette/bower.json
+++ b/marionette/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "todomvc-backbone_marionette_require",
+  "name": "wg_marionette",
   "version": "0.0.0",
   "dependencies": {
-    "todomvc-common": "~0.1.6",
-    "requirejs": "~2.1.6",
-    "underscore": "~1.4.4",
-    "backbone.marionette": "~1.0.3",
-    "backbone.localStorage": "~1.1.4"
+  	"jquery": "~2.1.x",
+    "requirejs": "~2.1.14",
+    "underscore": "~1.6",
+    "backbone.marionette": "~2.1",
+    "backbone.localStorage": "~1.1.10"
   }
 }
