--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules
 bower_components
+bower_components
+backbone
+backbone.babysitter
+backbone.localStorage
+backbone.marionette
+backbone.wreqr
+jquery
+requirejs
+underscore
