--- a/marionette/bower.json
+++ b/marionette/bower.json
@@ -6,6 +6,7 @@
     "requirejs": "~2.1.14",
     "underscore": "~1.6",
     "backbone.marionette": "~2.1",
-    "backbone.localStorage": "~1.1.10"
+    "backbone.localStorage": "~1.1.10",
+    "bootstrap": "~3.2.0"
   }
 }
