--- a/jQuery/package.json
+++ b/jQuery/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "jQuery_WG_task",
-    "version": "0.0.0",
-    "description": "ERROR: No README data found!",
-    "main": "Gruntfile.js",
-    "dependencies": {
-        "grunt": "^0.4.5",
-        "grunt-nunjucks": "^0.1.4",
-        "nunjucks": "^1.0.7",
-        "grunt-cli": "~0.1.13",
-        "grunt-contrib-uglify": "~0.5.1",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-concat": "~0.5.0"
-    },
-    "devDependencies": {},
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "BSD-2-Clause"
+  "name": "jQuery_WG_task",
+  "version": "0.0.0",
+  "description": "ERROR: No README data found!",
+  "main": "Gruntfile.js",
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-nunjucks": "^0.1.4",
+    "nunjucks": "^1.0.7"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "BSD-2-Clause"
 }
